--- a/style.css
+++ b/style.css
@@ -1,1 +1,127 @@
-Any content
+
+html {
+    scroll-behavior: smooth; 
+}
+
+body {
+    font-family: 'Lato', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.header {
+    background-color: #c5dfe0;
+}
+
+
+
+
+.footer {
+    background-color: #c5dfe0;
+
+}
+
+.main {
+    margin-bottom: auto;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    list-style: none;
+}
+
+.nav-link {
+    padding: 0 20px;
+    line-height: 50px;
+    transition: .3s;
+}
+
+.nav-item a {
+    color: #344f50;
+    text-decoration: none;  
+    transition: color 0.5s;
+}
+
+a.nav-item {
+    color: #344f50;
+    text-decoration: none;  
+    transition: color 0.5s;
+}
+
+.nav-item a:hover {
+    color: #db5b05;
+}
+
+
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 100px;
+    padding-top: 30px;
+    padding-right: 100px;
+}
+  
+.section {
+    width: 50%;
+}
+
+  @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+  }
+
+.img {
+    width: 200px;
+    border-radius: 100px; 
+}
+
+.imgrss {
+    width: 100px;
+    float: right;
+    margin: 10px;
+}
+
+.list {
+    list-style: none;
+    padding-left: 0;
+}
+.skills-list {
+    padding-left: 20px;
+}
+
+.languages-list {
+    padding-left: 20px;
+}
+
+.skills-list2 {
+    padding-left: 20px;
+}
+
+.courses-list {
+    padding-left: 20px;
+}
+.git {
+    padding-left: 10px;
+    padding-top: 20px;
+    font-size: 20px;
+}
+.year {
+
+ font-size: 20px;
+ padding-left: 10px}
